Just for Oracle, changed the table handler to release the connections.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1063 89a0fb20-889e-aefa-90f6-7c296b20d5cf